[gd_scene load_steps=16 format=2]

[ext_resource path="res://GFX/white-platformer-tileset.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 7 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 272, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 256, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 256, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 256, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 256, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 272, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 288, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 304, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 320, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 336, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "Crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
Bullet = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 6 )
animation = "Idle"
playing = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HealthLossTimer" type="Timer" parent="."]
one_shot = true

[node name="Debug" type="Label" parent="."]
margin_left = 13.0
margin_top = -28.0
margin_right = 53.0
margin_bottom = -14.0
text = "State"

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8, 0 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -8, 0 )

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_CoyoteJumpTimer_timeout"]
[connection signal="timeout" from="WallJumpTimer" to="." method="_on_WallJumpTimer_timeout"]
